link summary activity

--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -76,7 +76,7 @@
             />
 
         <Button
-            android:id="@+id/stats_button"
+            android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/stats"
@@ -93,15 +93,14 @@
             android:id="@+id/viewAction_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Actions"
-            android:textSize="36sp"
-            android:layout_marginTop="50dp"
-            android:padding="30dp"
             android:layout_alignBaseline="@id/button"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="50dp"
             android:layout_marginStart="50dp"
-            />
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
+            android:padding="30dp"
+            android:text="Actions"
+            android:textSize="36sp" />
 
         <TextView
             android:id="@+id/firstQuarter"
