--- a/app/src/main/res/drawable/game_button.xml
+++ b/app/src/main/res/drawable/game_button.xml
@@ -4,7 +4,7 @@
         android:radius="14dp"
         />
     <solid
-        android:color="#3E80D6"
+        android:color="#FFFFFF"
         />
     <padding
         android:left="0dp"
@@ -13,8 +13,8 @@
         android:bottom="0dp"
         />
     <size
-        android:width="270dp"
-        android:height="60dp"
+        android:width="300dp"
+        android:height="50dp"
         />
     <stroke
         android:width="1dp"
