--- a/app/src/main/res/layout/activity_view_teams.xml
+++ b/app/src/main/res/layout/activity_view_teams.xml
@@ -59,11 +59,18 @@
 
         </LinearLayout>
 
-        <fragment
-            android:id="@+id/fragment"
-            android:name="com.example.teamcharizard.ViewTeamsFragmentOne"
+        <!--<fragment-->
+            <!--android:id="@+id/fragment"-->
+            <!--android:name="com.example.teamcharizard.ViewTeamsFragmentOne"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <FrameLayout
+            android:id="@+id/team_stats_frag_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
+
+        </FrameLayout>
 
     </LinearLayout>
 
