fuck radio buttons

--- a/app/src/main/res/layout/activity_add_stats.xml
+++ b/app/src/main/res/layout/activity_add_stats.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_margin="10dp"
-        >
+        android:layout_margin="10dp">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,11 +22,13 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
+
                 <Button
                     android:id="@+id/add_stat1"
                     android:layout_height="match_parent"
@@ -152,6 +154,7 @@
                     android:layout_margin="10dp"
                     android:maxLines="2"/>
             </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
