--- a/app/src/main/res/layout/activity_chose_player.xml
+++ b/app/src/main/res/layout/activity_chose_player.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
@@ -25,7 +25,15 @@
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="10dp"
                 />
-
+            <TextView
+                android:id="@+id/quarter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="10dp"
+                android:text="@string/quarter2"
+                android:textSize="32sp"
+                android:layout_marginTop="10dp"
+                />
             <TextView
                 android:id="@+id/team2"
                 android:layout_width="wrap_content"
@@ -40,44 +48,38 @@
                 />
         </LinearLayout>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-        <TextView
-            android:id="@+id/score1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="70dp"
-            android:layout_marginBottom="60dp"
-            android:text="45"
-            android:textSize="48sp" />
+            <TextView
+                android:id="@+id/score1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="70dp"
+                android:layout_marginBottom="60dp"
+                android:layout_gravity="start"
+                android:text="45"
+                android:textSize="48sp" />
 
-        <TextView
-            android:id="@+id/dash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
-            android:text="-"
-            android:textSize="36sp"
-            />
+            <TextView
+                android:id="@+id/dash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="20dp"
+                android:layout_gravity="center"
+                android:text="-"
+                android:textSize="36sp"
+                />
 
-        <TextView
-            android:id="@+id/score2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="70dp"
-            android:layout_marginBottom="60dp"
-            android:text="38"
-            android:textSize="48sp" />
-        <TextView
-            android:id="@+id/quarter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="@string/quarter2"
-            android:textSize="32sp"
-            android:layout_marginTop="10dp"
-            />
+            <TextView
+                android:id="@+id/score2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="70dp"
+                android:layout_marginBottom="60dp"
+                android:layout_gravity="end"
+                android:text="38"
+                android:textSize="48sp" />
         </LinearLayout>
 
         <LinearLayout
