--- a/app/src/main/res/layout/activity_chose_player.xml
+++ b/app/src/main/res/layout/activity_chose_player.xml
@@ -135,15 +135,11 @@
                     android:gravity="center"
                     android:text="@string/player5" />
             </RadioGroup>
-            <ScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="400dp">
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:id="@+id/action_group">
-
+                android:id="@+id/action_group1">
                     <RadioButton
                         android:id="@+id/stat1"
                         android:layout_width="150dp"
@@ -185,6 +181,11 @@
                         android:padding="20dp"
                         android:layout_margin="10dp"
                         android:maxLines="2"/>
+            </RadioGroup>
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/action_group2">
                     <RadioButton
                         android:id="@+id/stat6"
                         android:layout_width="150dp"
@@ -230,7 +231,6 @@
                         android:layout_margin="10dp"
                         android:maxLines="2"/>
             </RadioGroup>
-            </ScrollView>
         </LinearLayout>
         <Button
             android:layout_width="wrap_content"
