--- a/app/src/main/res/layout/activity_start_new_game.xml
+++ b/app/src/main/res/layout/activity_start_new_game.xml
@@ -19,11 +19,11 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="5"
         android:layout_gravity="center"
+        android:ems="5"
         android:gravity="center"
         android:inputType="date|number"
-        android:text="Game Date" />
+        android:hint="Game Date" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,15 +32,15 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <EditText
+        <TextView
             android:id="@+id/team1"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:gravity="start"
-            android:autofillHints="@string/team1"
-            android:text="@string/team1"
-             />
+            android:text="UIUC"
+            android:textSize="24sp"
+            />
 
 
         <TextView
@@ -56,15 +56,15 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:autofillHints="@string/team2"
-            android:text="@string/team2"
-             />
+            android:hint="Opponent"
+            />
     </LinearLayout>
 
     <Button
         android:id="@+id/addGame"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:text="@string/addGame" />
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="Start Game" />
 
 </LinearLayout>
