--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="370dp"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <FrameLayout
