--- a/app/src/main/res/layout/main_activity_team_stats_fragment.xml
+++ b/app/src/main/res/layout/main_activity_team_stats_fragment.xml
@@ -18,8 +18,8 @@
             android:layout_height="273dp"
             android:layout_margin="5dp"
             android:clipToPadding="false"
-            android:gravity="center_horizontal">
-
+            android:gravity="center_horizontal"
+            android:id="@+id/team_stats_table">
             <TableRow>
 
                 <TextView
@@ -67,7 +67,7 @@
                     android:text="@string/points"
                     android:textSize="16sp" />
             </TableRow>
-
+<!--
             <TableRow>
 
                 <TextView
@@ -637,7 +637,7 @@
                     android:text="@string/tempPoints"
                     android:textSize="15sp" />
             </TableRow>
-
+-->
         </TableLayout>
     </LinearLayout>
 
