--- a/app/src/main/res/layout/activity_view_teams.xml
+++ b/app/src/main/res/layout/activity_view_teams.xml
@@ -26,44 +26,59 @@
                 android:textStyle="normal"
                 android:visibility="visible" />
         </LinearLayout>
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:id="@+id/view_teams_table">
+                <TableRow>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="91dp"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
+                    <TextView
+                        android:padding="3dip"
+                        android:text="Player Numbers"
+                        android:textSize="16sp" />
 
-            <Button
-                android:id="@+id/team1_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:layout_marginLeft="110dp"
-                android:background="#A4FFFFFF"
-                android:gravity="center"
-                android:layerType="none"
-                android:onClick="selectFrag"
-                android:text="TEAM1"
-                android:textAllCaps="false"
-                android:textSize="13sp" />
+                    <TextView
+                        android:padding="3dip"
+                        android:text="@string/fg"
+                        android:textSize="16sp" />
 
-            <Button
-                android:id="@+id/team2_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:background="#A4FFFFFF"
-                android:onClick="selectFrag"
-                android:text="Team2"
-                android:textSize="13sp" />
+                    <TextView
+                        android:padding="3dip"
+                        android:text="@string/ThreePT"
+                        android:textSize="16sp" />
 
-        </LinearLayout>
+                    <TextView
+                        android:padding="3dip"
+                        android:text="@string/ft"
+                        android:textSize="16sp" />
 
-        <fragment
-            android:id="@+id/fragment"
-            android:name="com.example.teamcharizard.ViewTeamsFragmentOne"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+                    <TextView
+                        android:padding="3dip"
+                        android:text="@string/rebounds"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:padding="3dip"
+                        android:text="@string/steal"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:padding="3dip"
+                        android:text="@string/block"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:padding="3dip"
+                        android:text="@string/fouls"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:padding="3dip"
+                        android:text="@string/points"
+                        android:textSize="16sp" />
+                </TableRow>
+        </TableLayout>
 
     </LinearLayout>
 
