--- a/app/src/main/res/layout/activity_chose_player.xml
+++ b/app/src/main/res/layout/activity_chose_player.xml
@@ -47,6 +47,7 @@
                 android:layout_marginTop="10dp"
                 />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="70dp"
-                android:layout_marginBottom="60dp"
+                android:layout_marginBottom="40dp"
                 android:layout_gravity="start"
                 android:text="45"
                 android:textSize="48sp" />
@@ -65,8 +66,8 @@
                 android:id="@+id/dash"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="20dp"
                 android:layout_gravity="center"
+                android:paddingBottom="60dp"
                 android:text="-"
                 android:textSize="36sp"
                 />
@@ -80,6 +81,14 @@
                 android:layout_gravity="end"
                 android:text="38"
                 android:textSize="48sp" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/submit_chose_player"
+                android:layout_marginTop = "40dp"
+                android:text="Submit"
+                android:textSize="20sp"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -95,8 +104,12 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:button="@null"
-                    android:background="@drawable/round_button_1"
+                    android:background="@drawable/checkbox"
+                    android:textSize= "60sp"
+                    android:typeface = "serif"
                     android:gravity="center"
+                    android:textStyle = "bold|italic"
+                    android:textColor="@color/textNumber"
                     android:text="@string/player1" />
 
                 <RadioButton
@@ -104,8 +117,12 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:button="@null"
-                    android:background="@drawable/round_button_1"
+                    android:background="@drawable/checkbox"
+                    android:textSize= "60sp"
+                    android:typeface = "serif"
                     android:gravity="center"
+                    android:textStyle = "bold|italic"
+                    android:textColor="@color/textNumber"
                     android:text="@string/player2" />
 
                 <RadioButton
@@ -113,8 +130,12 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:button="@null"
-                    android:background="@drawable/round_button_1"
+                    android:background="@drawable/checkbox"
+                    android:textSize= "60sp"
+                    android:typeface = "serif"
                     android:gravity="center"
+                    android:textStyle = "bold|italic"
+                    android:textColor="@color/textNumber"
                     android:text="@string/player3" />
 
                 <RadioButton
@@ -122,8 +143,12 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:button="@null"
-                    android:background="@drawable/round_button_1"
+                    android:background="@drawable/checkbox"
+                    android:textSize= "60sp"
+                    android:typeface = "serif"
                     android:gravity="center"
+                    android:textStyle = "bold|italic"
+                    android:textColor="@color/textNumber"
                     android:text="@string/player4" />
 
                 <RadioButton
@@ -131,9 +156,14 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:button="@null"
-                    android:background="@drawable/round_button_1"
+                    android:background="@drawable/checkbox"
+                    android:textSize= "60sp"
+                    android:typeface = "serif"
                     android:gravity="center"
+                    android:textStyle = "bold|italic"
+                    android:textColor="@color/textNumber"
                     android:text="@string/player5" />
+
             </RadioGroup>
             <RadioGroup
                 android:layout_width="wrap_content"
@@ -232,24 +262,26 @@
                         android:maxLines="2"/>
             </RadioGroup>
         </LinearLayout>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/submit_chose_player"
-            android:text="Submit"
-            android:layout_gravity="center"
-            android:textSize="40sp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:id="@+id/swap_player_button"
+                android:background="@drawable/swapicon" />
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+
+            <Button
                 android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/stats"
-                android:textSize="40sp"
-                android:layout_gravity="start"
+                android:textSize="20sp"
                 />
 
             <Button
@@ -257,8 +289,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Actions"
-                android:textSize="40sp"
-                android:layout_gravity="end"
+                android:textSize="20sp"
                 />
         </LinearLayout>
     </LinearLayout>
