--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#75A9FF</color>
+    <color name="colorPrimaryDark">#000EE1</color>
+    <color name="colorAccent">#FF612E</color>
+
+    <color name="cardview_light_background">#ffffff</color>
+
+    <color name="playerButtonBackground">#FF612E</color>
+    <color name="playerButtonSelected">#2E34FF</color>
+    <color name ="textNumber">#00ccff</color>
 </resources>
