added more functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,15 +83,21 @@
             android:layout_height="370dp"
             android:orientation="vertical">
 
-            <fragment
-                android:id="@+id/fragment"
-                android:name="com.example.teamcharizard.MainActivityTeamStatsFragment"
+            <!--<fragment-->
+                <!--android:id="@+id/fragment"-->
+                <!--android:name="com.example.teamcharizard.MainActivityTeamStatsFragment"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="20dp"-->
+                <!--android:layout_marginRight="20dp" />-->
+
+
+            <FrameLayout
+                android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp" />
+                android:layout_height="match_parent">
 
-
+            </FrameLayout>
         </LinearLayout>
 
         <LinearLayout
