--- a/app/src/main/res/layout/activity_view_my_team.xml
+++ b/app/src/main/res/layout/activity_view_my_team.xml
@@ -15,7 +15,8 @@
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="302dp"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:id="@+id/view_my_team_table">
 
             <TableRow>
 
@@ -64,7 +65,7 @@
                     android:text="@string/points"
                     android:textSize="16sp" />
             </TableRow>
-
+<!--
             <TableRow>
 
                 <TextView
@@ -634,7 +635,7 @@
                     android:text="@string/tempPoints"
                     android:textSize="15sp" />
             </TableRow>
-
+-->
         </TableLayout>
     </LinearLayout>
 
