--- a/app/src/main/res/layout/activity_chose_player.xml
+++ b/app/src/main/res/layout/activity_chose_player.xml
@@ -10,27 +10,27 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_gravity="center">
             <TextView
                 android:id="@+id/team1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="20dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="UIUC"
                 android:textSize="40sp"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 />
-            <TextView
+            <Button
                 android:id="@+id/quarter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="10dp"
-                android:text="@string/quarter2"
+                android:text="1st"
                 android:textSize="32sp"
                 android:layout_marginTop="10dp"
                 />
@@ -38,26 +38,27 @@
                 android:id="@+id/team2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="20dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="Other"
+                android:maxWidth="200dp"
                 android:textSize="40sp"
-                android:layout_marginEnd="50dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginTop="10dp"
                 />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_gravity="center">
             <TextView
                 android:id="@+id/score1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="70dp"
-                android:layout_marginBottom="40dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_gravity="start"
                 android:text="45"
                 android:textSize="48sp" />
@@ -67,7 +68,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:paddingBottom="60dp"
+                android:paddingBottom="10dp"
+                android:paddingRight="20dp"
+                android:paddingLeft="20dp"
                 android:text="-"
                 android:textSize="36sp"
                 />
@@ -76,18 +79,11 @@
                 android:id="@+id/score2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="70dp"
-                android:layout_marginBottom="60dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_gravity="end"
                 android:text="38"
                 android:textSize="48sp" />
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/submit_chose_player"
-                android:layout_marginTop = "40dp"
-                android:text="Submit"
-                android:textSize="20sp"/>
 
         </LinearLayout>
 
@@ -171,27 +167,11 @@
                 android:orientation="vertical"
                 android:id="@+id/action_group1">
                     <RadioButton
-                        android:id="@+id/stat1"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:padding="20dp"
-                        android:maxLines="2"
-                        android:text="@string/action1" />
-                    <RadioButton
-                        android:id="@+id/stat2"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/action2"
-                        android:padding="20dp"
-                        android:layout_margin="10dp"
-                        android:maxLines="2"/>
-                    <RadioButton
                         android:id="@+id/stat3"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:text="@string/action3"
-                        android:padding="20dp"
+                        android:padding="10dp"
                         android:layout_margin="10dp"
                         android:maxLines="2"/>
 
@@ -200,15 +180,52 @@
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:text="@string/action4"
-                        android:padding="20dp"
+                        android:padding="10dp"
                         android:layout_margin="10dp"
                         android:maxLines="2"/>
+
+                    <RadioButton
+                        android:id="@+id/stat1"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:padding="10dp"
+                        android:maxLines="2"
+                        android:text="@string/action1" />
+
+                    <RadioButton
+                        android:id="@+id/stat2"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/action2"
+                        android:padding="10dp"
+                        android:layout_margin="10dp"
+                        android:maxLines="2"/>
+
+                    <RadioButton
+                        android:id="@+id/stat11"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="FT Made"
+                        android:layout_margin="10dp"
+                        android:maxLines="2" />
+
+                    <RadioButton
+                        android:id="@+id/stat12"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="FT Missed"
+                        android:layout_margin="10dp"
+                        android:maxLines="2" />
+
                     <RadioButton
                         android:id="@+id/stat5"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:text="@string/action5"
-                        android:padding="20dp"
+                        android:padding="10dp"
                         android:layout_margin="10dp"
                         android:maxLines="2"/>
             </RadioGroup>
@@ -221,75 +238,98 @@
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:text="@string/action6"
-                        android:padding="20dp"
-                        android:layout_margin="10dp"
-                        android:maxLines="2"/>
-
-                    <RadioButton
-                        android:id="@+id/stat7"
-                        android:layout_width="150dp"
-                        android:layout_height="wrap_content"
-                        android:padding="20dp"
-                        android:text="@string/action9"
-                        android:layout_margin="10dp"
+                        android:padding="10dp"
+                        android:layout_margin="15dp"
                         android:maxLines="2"/>
 
                     <RadioButton
                         android:id="@+id/stat8"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:padding="20dp"
+                        android:padding="10dp"
                         android:text="@string/action8"
-                        android:layout_margin="10dp"
+                        android:layout_margin="15dp"
+                        android:maxLines="2"/>
+
+                    <RadioButton
+                        android:id="@+id/stat13"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Opp FT made"
+                        android:layout_margin="15dp"
+                        android:padding="10dp"
+                        android:maxLines="2" />
+
+                    <RadioButton
+                        android:id="@+id/stat7"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:text="@string/action9"
+                        android:layout_margin="15dp"
                         android:maxLines="2"/>
 
                     <RadioButton
                         android:id="@+id/stat9"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:padding="20dp"
+                        android:padding="10dp"
                         android:text="@string/action10"
-                        android:layout_margin="10dp"
+                        android:layout_margin="15dp"
                         android:maxLines="2"/>
 
                     <RadioButton
                         android:id="@+id/stat10"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:padding="20dp"
+                        android:padding="10dp"
                         android:text="@string/action7"
-                        android:layout_margin="10dp"
+                        android:layout_margin="15dp"
                         android:maxLines="2"/>
+
+
             </RadioGroup>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
+            android:id="@+id/submit_chose_player"
+            android:padding="15dp"
+            android:layout_margin="5dp"
+            android:layout_gravity="center"
+            android:text="Submit"
+            android:textSize="20sp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+          <!--  <Button
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:id="@+id/swap_player_button"
-                android:background="@drawable/swapicon" />
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:background="@drawable/swapicon" /> -->
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:text="@string/stats"
                 android:textSize="20sp"
+                android:padding="15dp"
+                android:layout_margin="5dp"
                 />
 
             <Button
                 android:id="@+id/viewAction_button"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:text="Actions"
                 android:textSize="20sp"
+                android:padding="15dp"
+                android:layout_margin="5dp"
                 />
         </LinearLayout>
     </LinearLayout>
